Say where -XX:+EnableDynamicAgentLoading goes
JEP 451 warns from Java 21 and will disallow attaching an agent to a running
JVM in a future release. A server started with -XX:-EnableDynamicAgentLoading
refuses today, and that refusal was falling through to the generic branch: the
developer read 'Failed to attach to PID 1234: Failed to load agent library:
Dynamic agent loading is not enabled. Use -XX:+EnableDynamicAgentLoading to
launch target VM.' One useful sentence, wrapped in two that add nothing, and it
stops where the next question starts.

Where the flag goes depends on how the server was launched. On SAP Commerce it
is tomcat.javaoptions in 95-local.properties, which is the file the plugin
already writes its agent line into, so it can name it. On Spring Boot it is the
run configuration. And a server started with the agent already on the command
line is untouched by any of this, which turns a dead end into a choice.

Verified against a JVM started with the flag off: the new branch is the one
selected.